--- a/example/acme-bakery.yml
+++ b/example/acme-bakery.yml
@@ -1,34 +1,128 @@
-title: Acme Bakery
+title: "&#127874; Acme Bakery"
 
 css:
   - https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css
   - https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css
+  - acme-bakery.css
+
+header_js: []
 
 footer_js:
   - https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js
+
+header:
+  - tag: div
+    class: container
+    children:
+      - tag: div
+        class: row mt-2
+        children:
+          - tag: div
+            class: col-6
+            children:
+              - tag: p
+                class: lead mb-1
+                children:
+                  - text: "&#127874; Acme Bakery"
+
+          - tag: div
+            class: col-2 text-end
+            children:
+              - tag: a
+                href: "#"
+                class: pt-2
+                children:
+                  - tag: i
+                    class: bi-house
+                  - text: Home
+
+          - tag: div
+            class: col-2 text-end
+            children:
+              - tag: a
+                href: "#about"
+                class: mt-2
+                children:
+                  - tag: i
+                    class: bi-info-circle
+                  - text: About Us
+
+          - tag: div
+            class: col-2 text-end
+            children:
+              - tag: a
+                href: "#contact"
+                class: mt-2
+                children:
+                  - tag: i
+                    class: bi-envelope
+                  - text: Contact
+
+      - tag: div
+        class: row
+        children:
+          - tag: div
+            class: col-12
+            children:
+              - tag: hr
+                class: mt-0 mb-2
+
+footer:
+  - tag: div
+    class: container
+    children:
+      - tag: div
+        class: row
+        children:
+          - tag: div
+            class: col-12
+            children:
+              - tag: hr
+                class: mt-2 mb-1
+
+      - tag: div
+        class: row mb-2
+        children:
+          - tag: div
+            class: col-12 text-center
+            children:
+              - text: "&copy; 2022, Acme Bakery LLC"
 
 pages:
   home:
     - tag: div
       class: container
       children:
-        - tag: h1
-          class: mt-4
+        - tag: div
+          class: row
           children:
-            - text: Hello, world!
+            - tag: div
+              class: col-12 text-center
+              children:
+                - tag: img
+                  class: rounded
+                  src: https://www.publicdomainpictures.net/pictures/10000/velka/87-1273073877xEjA.jpg
+
+  about: []
+  contact: []
 
   404:
     - tag: div
       class: container
       children:
-        - tag: h1
-          class: mt-5 text-danger text-center
+        - tag: div
+          class: row
           children:
-            - tag: i
-              class: bi-exclamation-circle
-            - text: Error 404
+            - tag: div
+              class: col-12 mt-5 mb-5 text-center text-danger
+              children:
+                - tag: h1
+                  children:
+                    - tag: i
+                      class: bi-exclamation-circle
+                    - text: Error 404
 
-        - tag: h2
-          class: text-danger text-center
-          children:
-            - text: Page not found
+                - tag: h2
+                  class: text-danger text-center
+                  children:
+                    - text: Page not found
