--- a/example/acme-bakery.yml
+++ b/example/acme-bakery.yml
@@ -99,11 +99,60 @@ pages:
             - tag: div
               class: col-12 text-center
               children:
-                - tag: img
-                  class: rounded
-                  src: https://www.publicdomainpictures.net/pictures/10000/velka/87-1273073877xEjA.jpg
+                - tag: div
+                  class: img img-home
 
-  about: []
+  about:
+    - tag: div
+      class: container
+      children:
+        - tag: div
+          class: row
+          children:
+            - tag: div
+              class: col-5
+              children:
+                - tag: div
+                  class: img img-about
+
+            - tag: div
+              class: col-7
+              children:
+                - tag: p
+                  class: lead text-secondary
+                  children:
+                    - tag: i
+                      class: bi-info-circle
+                    - text: About Us
+
+                - tag: p
+                  children:
+                    - text: >-
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Consectetur adipiscing elit duis tristique
+                        sollicitudin nibh. Tortor vitae purus faucibus ornare.
+                        Dui id ornare arcu odio ut. Dictum at tempor commodo
+                        ullamcorper. Nunc aliquet bibendum enim facilisis
+                        gravida neque convallis a cras. Phasellus vestibulum
+                        lorem sed risus. Donec ultrices tincidunt arcu non
+                        sodales neque sodales. Nibh praesent tristique magna
+                        sit amet purus gravida quis. Sed risus ultricies
+                        tristique nulla aliquet enim tortor at auctor.
+
+                - tag: p
+                  children:
+                    - text: >-
+                        Ut aliquam purus sit amet. Egestas quis ipsum
+                        suspendisse ultrices gravida. Ut placerat orci nulla
+                        pellentesque dignissim. Dignissim convallis aenean et
+                        tortor at risus viverra adipiscing at. Pharetra
+                        convallis posuere morbi leo urna molestie at. Pretium
+                        viverra suspendisse potenti nullam ac tortor vitae
+                        purus. Aliquet lectus proin nibh nisl. Odio ut sem nulla
+                        pharetra diam sit. Lorem donec massa sapien faucibus et.
+                        Malesuada pellentesque elit eget gravida cum.
+
   contact: []
 
   404:
